--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
 body {
+    margin: 0;
     background-color: #dba484;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #427ea1;
     ;
+}
+
+header{
+    background: #427ea1;
+}
+
+.container {
+    width: 88%;
 }
 
 h1{
