--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ header{
     width: 88%;
 }
 
+#intro {
+    text-align: center;
+    font-size: 20px; 
+}
+
 h1{
     text-align: center;
     font-size: 40px;
