--- a/css/week2.css
+++ b/css/week2.css
@@ -1,14 +1,27 @@
 body {
-    background: #cc8383;
-    color: #83CCCC;
+    background: #9B646F;
+    color: #6F9B64;
     margin: 32pt 0 0 18pt;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30pt;
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
 }
 
 a {
-    color: #117;
+    color: #646F9B;
     text-decoration: none;
+}
+
+h1 {
+    text-transform: uppercase;
+    font-size: 30pt;
+}
+
+h1 sub {
+    text-transform: uppercase;
+    font-size: 12pt;
+}
+
+h2 {
+    font-style: italic;
 }
 
 #main {
@@ -16,7 +29,8 @@ a {
 }
 
 #main div {
-    font-weight: 900;
-    position:relative;
+    font-size: 20pt;
+    font-style: italic;
+    font-weight: bold;
     padding-bottom: 21px;
 }
