--- a/week3/week3.css
+++ b/week3/week3.css
@@ -2,6 +2,7 @@ body {
     text-align: center;
     background: #9B646F;
     color: #6F9B64;
+    -webkit-text-stroke: 1px #4a6843;
     margin: 32pt 0 0 18pt;
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
 }
@@ -13,7 +14,7 @@ a {
 
 h1 {
     text-transform: uppercase;
-    font-size: 30pt;
+    font-size: 35pt;
 }
 
 h1 sub {
