--- a/week2/week2.css
+++ b/week2/week2.css
@@ -1,6 +1,8 @@
 body {
+    text-align: center;
     background: #9B646F;
     color: #6F9B64;
+    -webkit-text-stroke: 1px #4a6843;
     margin: 32pt 0 0 18pt;
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
 }
@@ -12,7 +14,7 @@ a {
 
 h1 {
     text-transform: uppercase;
-    font-size: 30pt;
+    font-size: 35pt;
 }
 
 h1 sub {
@@ -25,7 +27,9 @@ h2 {
 }
 
 #main {
-    width: 70%;
+    position: absolute;
+    text-align: center;
+    width: 100%;
 }
 
 #main div {
