--- a/week3/week3.css
+++ b/week3/week3.css
@@ -2,7 +2,7 @@ body {
     text-align: center;
     background: #9B646F;
     color: #6F9B64;
-    -webkit-text-stroke: 1px #4a6843;
+    -webkit-text-stroke: 1px #4b6944;
     margin: 32pt 0 0 18pt;
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
 }
