--- a/week3/week3.css
+++ b/week3/week3.css
@@ -1,8 +1,8 @@
 body {
     text-align: center;
-    background: #9B646F;
+    background: rgb(155, 100, 111);
     color: #6F9B64;
-    -webkit-text-stroke: 1px #4b6944;
+    -webkit-text-stroke: 1px #3f5839;
     margin: 32pt 0 0 18pt;
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
 }
@@ -13,6 +13,8 @@ a {
 }
 
 h1 {
+    color: #6F9B64;
+    -webkit-text-stroke: 2px #4b6944;
     text-transform: uppercase;
     font-size: 35pt;
 }
@@ -33,8 +35,16 @@ h2 {
 }
 
 #main div {
-    font-size: 20pt;
+    font-size: 22pt;
     font-style: italic;
     font-weight: bold;
     padding-bottom: 21px;
+}
+
+#bed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    position:fixed ;
 }
