--- a/week4/week4.css
+++ b/week4/week4.css
@@ -1,5 +1,5 @@
 body {
-    color: #B8C33C;
+    color: #458023;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     background-color: #473CC3;
