--- a/week4/week4.css
+++ b/week4/week4.css
@@ -1,45 +1,67 @@
 body {
-    color: #458023;
-    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    background-color: #473CC3;
-    -webkit-text-stroke: 1px rgb(65, 92, 58);
+    background: #9b646f;
+    color: #6F9B64;
+    -webkit-text-stroke: 1px #3f5839;
+    margin: 32pt 0 0 18pt;
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
-  }
-  h1{
-      font-size: 40px;
-  }
+}
 
-  h2 {
-    text-align: center;
-  }
-  
-  h3{
-      font-size: 20px;
-  }
-  p{
-      font-size: 20px;
-  }
+a {
+    color: #646F9B;
+    text-decoration: none;
+}
 
-  section {
-    margin: 20px auto;
-    text-align: center;
-  }
-  
-  button {
+h1 {
+    color: #6F9B64;
+    -webkit-text-stroke: 2px #4b6944;
     text-transform: uppercase;
-    font-family: Arial, Helvetica, sans-serif;
-    cursor: pointer;
-    padding: 14px 18px;
-  }
+    font-size: 35pt;
+}
 
-  .color-div {
-    height: 60px;
-    background-color: green;
-  }
-  
-  video {
-    width: 80%;
+h1 sub {
+    text-transform: uppercase;
+    font-size: 12pt;
+}
+
+h2 {
+    font-style: italic;
+}
+
+button {
+    text-transform: uppercase;
+    border:#3f5839;
+    border-radius: 30px;
+    padding: 14px 18px;
+    cursor: pointer;
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+}
+
+#main {
+    position: absolute;
+    text-align: center;
+    width: 100%;
+}
+
+#main div {
+    font-size: 22pt;
+    font-style: italic;
+    font-weight: bold;
+    padding-bottom: 21px;
+}
+
+#bed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+    position: fixed ;
+}
+
+#sun{
+    position: fixed;
+    width: 25%;
     height: auto;
-  }
-  
+    top: -80px ;
+    right:-120px;
+} 
