--- a/week5/week5.css
+++ b/week5/week5.css
@@ -1,4 +1,10 @@
 body{
-    text-align: center;
+    background-color: #FF7F50;
+    color: #35a8bd;
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+}
+
+h1{
+    text-decoration: underline;
+    text-align: center;
 }
