--- a/week5/week5.css
+++ b/week5/week5.css
@@ -1,6 +1,6 @@
 body{
     background-color: #FF7F50;
-    color: #35a8bd;
+    color: #2f96a8;
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
 }
 
