--- a/week6/week6.css
+++ b/week6/week6.css
@@ -18,7 +18,6 @@ img{
 }
 
 button {
-    position:static;
     font-size: 15px;
     margin-right: 2px;
     margin-left: 2px;
@@ -35,4 +34,9 @@ button {
 button:hover{
     background-color: #62c8da;
     color: white;
+}
+
+#container {
+    display: flex;
+    justify-content: center;   
 }
